--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "babel": "^4.7.5",
     "babel-core": "^4.7.5",
+    "babel-eslint": "^2.0.0",
     "babel-loader": "^4.1.0",
     "css-loader": "~0.9.0",
+    "eslint": "^0.16.2",
     "jsx-loader": "^0.12.2",
     "webpack": "~1.4.11"
   },
