--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.js",
   "author": "Dave O",
   "dependencies": {
-    "react": "^0.13.0-beta.1"
+    "react": "^0.13.1"
   },
   "devDependencies": {
     "babel": "^4.7.5",
